--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,10 @@
 @import "variant-colors.scss";
+@import 'https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap';
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;  
+  -webkit-font-smoothing: antialiased;
+  font-family: "Inter", sans-serif;
 }
