--- a/src/variant-colors.scss
+++ b/src/variant-colors.scss
@@ -1,17 +1,17 @@
-$primary-text: #F4F4F5;
-$button-bg-violet: #8B5CF6;
-$btn-text-primary: #F5F3FF;
-$btn-bg-primary: #8B5CF6;
-$btn-primary-hover: #7C3AED;
+$primary-text: #f4f4f5;
+$button-bg-violet: #8b5cf6;
+$btn-text-primary: #f5f3ff;
+$btn-bg-primary: #8b5cf6;
+$btn-primary-hover: #7c3aed;
 
+$zinc-100: #f4f4f5;
+$zinc-300: #d4d4d8;
 
-$zinc-300:#D4D4D8;
-$zinc-500:#71717A;
+$zinc-400: #a1a1aa;
+$zinc-500: #71717a;
 
-$zinc-600:#52525B;
-$zinc-800: #27272A;
-$zinc-900:#18181B;
-$zinc-950:#09090B;
-$zinc-50:#FAFAFA;
-
-
+$zinc-600: #52525b;
+$zinc-800: #27272a;
+$zinc-900: #18181b;
+$zinc-950: #09090b;
+$zinc-50: #fafafa;
