feat: add form to create goal

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,21 @@
-<main >
+<main>
   <section class="main-section">
     <div class="logo">
-      <img  ngSrc="./assets/logo-in-orbit.svg" width="115" height="36">
+      <img ngSrc="./assets/logo-in-orbit.svg" width="115" height="36" />
     </div>
-    <img ngSrc="./assets/lets-start-illustration.svg" width="305" height="300" priority />
-
-    <p>Você ainda não cadastrou nenhuma meta, que tal cadastrar um agora mesmo?</p>
-    <app-btn-primary [btn-text]="'Cadastrar meta'" [variant]="'primary'"></app-btn-primary>
+    <img
+      ngSrc="./assets/lets-start-illustration.svg"
+      width="305"
+      height="300"
+      priority
+    />
+    <p>
+      Você ainda não cadastrou nenhuma meta, que tal
+      <span>cadastrar um</span> agora mesmo?
+    </p>
+    <app-btn-primary
+      [btn-text]="'Cadastrar meta'"
+      [variant]="'primary'"
+    ></app-btn-primary>
   </section>
 </main>
