--- a/src/variant-colors.scss
+++ b/src/variant-colors.scss
@@ -4,9 +4,10 @@ $btn-text-primary: #f5f3ff;
 $btn-bg-primary: #8b5cf6;
 $btn-primary-hover: #7c3aed;
 
+$pink-500: #ec4899;
+
 $zinc-100: #f4f4f5;
 $zinc-300: #d4d4d8;
-
 $zinc-400: #a1a1aa;
 $zinc-500: #71717a;
 
