--- a/src/variant-colors.scss
+++ b/src/variant-colors.scss
@@ -5,6 +5,7 @@ $btn-bg-primary: #8b5cf6;
 $btn-primary-hover: #7c3aed;
 
 $pink-500: #ec4899;
+$violet-600: #7c3aed;
 
 $zinc-100: #f4f4f5;
 $zinc-300: #d4d4d8;
