--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,21 +1,4 @@
 <main>
-  <section class="main-section">
-    <div class="logo">
-      <img ngSrc="./assets/logo-in-orbit.svg" width="115" height="36" />
-    </div>
-    <img
-      ngSrc="./assets/lets-start-illustration.svg"
-      width="305"
-      height="300"
-      priority
-    />
-    <p>
-      Você ainda não cadastrou nenhuma meta, que tal
-      <span>cadastrar um</span> agora mesmo?
-    </p>
-    <app-btn-primary
-      [btn-text]="'Cadastrar meta'"
-      [variant]="'primary'"
-    ></app-btn-primary>
-  </section>
+  <!-- <app-empty-goals></app-empty-goals> -->
+  <app-summary></app-summary>
 </main>
