--- a/src/variant-colors.scss
+++ b/src/variant-colors.scss
@@ -5,6 +5,7 @@ $btn-bg-primary: #8b5cf6;
 $btn-primary-hover: #7c3aed;
 
 $pink-500: #ec4899;
+$pink-400: #f472b6;
 $violet-600: #7c3aed;
 
 $zinc-100: #f4f4f5;
@@ -13,6 +14,7 @@ $zinc-400: #a1a1aa;
 $zinc-500: #71717a;
 
 $zinc-600: #52525b;
+$zinc-700: #3f3f46;
 $zinc-800: #27272a;
 $zinc-900: #18181b;
 $zinc-950: #09090b;
