--- a/src/app/components/summary/summary.component.html
+++ b/src/app/components/summary/summary.component.html
@@ -26,29 +26,13 @@
         <span> {{ "58%" }} </span>
       </div>
     </section>
+    @if (pendingGoals) {
+    <app-pending-goals
+      [pendingGoals]="pendingGoals"
+      (completionGoal)="update()"
+    ></app-pending-goals>
 
-    <div class="goals-to-complete">
-      <button>
-        <span class="material-icons">add</span>
-        Nadar
-      </button>
-      <button>
-        <span class="material-icons">add</span>
-        Meditar
-      </button>
-      <button>
-        <span class="material-icons">add</span>
-        Estudar
-      </button>
-      <button>
-        <span class="material-icons">add</span>
-        Estudar
-      </button>
-      <button [disabled]="disabled">
-        <span class="material-icons">add</span>
-        Praticar exercício
-      </button>
-    </div>
+    }
 
     <section class="current-week">
       <h3>Sua semana</h3>
