feat: refreshing the component every time the event is emited

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <main>
   <!-- <app-empty-goals></app-empty-goals> -->
-  <app-summary></app-summary>
+
+  <app-summary ngSkipHydration></app-summary>
 </main>
