--- a/src/app/components/summary/summary.component.scss
+++ b/src/app/components/summary/summary.component.scss
@@ -10,6 +10,11 @@
   height: 100vh;
   background-color: $zinc-950;
 }
+
+.no-data {
+  color: $zinc-400;
+  font-size: 14px;
+}
 .content-wrapper {
   display: flex;
   flex-direction: column;
